# SpeechRecognition

./: CMakeLists.txt  README.md  deploy
dictionaries/: 0583.lm  1048.lm  2640.dic  2640.lm  3070.dic  3070.lm  4461.lm  4647.dic  4647.lm  6706.dic  6706.lm  7600.dic  7600.lm
dictionaries/crashcmd/: 9284.dic  9284.lm  9284.log_pronounce  9284.sent  9284.vocab
images/dia/: Input Task.nsd  Interpreter Task.nsd  Mapper Task.nsd  Realzeitsystem.dia  Simulation Task.nsd
res/: 1898.dic  1898.lm  resy.ini
script/: doSomeIO  doSomeWork  startTest
src/: AudioBuffer.c  AudioBuffer.h  AudioBufferPool.c  AudioBufferPool.h  BlockingQueue.c  BlockingQueue.h  ButtonThread.c  ButtonThread.h  CrashSimulation.c  CrashSimulation.h  CrashSimulationThread.c  CrashSimulationThread.h  HypothesisMapper.c  HypothesisMapper.h  InputThread.c  InputThread.h  InterpreterThread.c  InterpreterThread.h  RTScheduling.c  RTScheduling.h  Simulation.c  Simulation.h  SimulationDrawer.c  SimulationDrawer.h  SimulationThread.c  SimulationThread.h  SphinxInstance.c  SphinxInstance.h  StringPool.c  StringPool.h  TimeTaking.c  TimeTaking.h  Utils.c  Utils.h  main.c  onButtonSphinx.c  testSphinx.c
src/test/: doSomeIO.c  memKill.c  onButtonSphinx.c  realzeitNachweis.c  recordCommand.c  testSphinx.c
